fix: #2048 fixed ellipsis overflow

--- a/packages/apps/spaces/components/ui-kit/atoms/table/table-cells/table-cells.module.scss
+++ b/packages/apps/spaces/components/ui-kit/atoms/table/table-cells/table-cells.module.scss
@@ -69,6 +69,7 @@
 
 .textContent {
   margin-left: var(--spacing-sm);
+  overflow: hidden;
 }
 .cellData {
   display: flex;
